# mc_clone

./: .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.h  README.md  config.h  dist.sh  main.cpp  mc-clone-2.kdev4
.kdev4/: mc-clone-2.kdev4
assets/shaders/: frag.glsl  vert.glsl
assets/shaders/chunk/: frag.glsl  vert.glsl
assets/shaders/chunk_solid/: frag.glsl  vert.glsl
assets/shaders/skybox/: vert.glsl
assets/shaders/test/: frag.glsl  vert.glsl
assets/shaders/texture/: frag.glsl  vert.glsl
assets/shaders/wireframe/: frag.glsl  vert.glsl
game/: Camera.cpp  Camera.h  Game.cpp  Game.h  Window.cpp  Window.h
game/block/: Block.h  content.cpp  content.h
game/gl/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
game/mesh/: ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  VertexData.h
game/renderer/: Skybox.cpp  Skybox.h  WorldRenderer.cpp  WorldRenderer.h
game/world/: Chunk.cpp  Chunk.h  ChunkCoord.cpp  ChunkCoord.h  HeightMap.cpp  HeightMap.hpp  World.cpp  World.h
render/: Camera.cpp  Camera.h
render/mesh/: ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h
render/texture/: Texture.cpp  Texture.h
shader/: ShaderProgram.cpp  ShaderProgram.h
utils/: TaskQueue.h  files.cpp  files.h
world/: Chunk.cpp  Chunk.h  World.cpp  World.h  types.cpp  types.h
world/block/: Block.cpp  Block.h
